--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,25 @@
 discord.py
 requests
 numpy
+python-dotenv
+pandas
+matplotlib
+scikit-learn
+flask
+sqlalchemy
+pytest
+beautifulsoup4
+lxml
+pillow
+tensorflow
+torch
+transformers
+jupyter
+notebook            
+seaborn
+plotly
+fastapi
+uvicorn
+pydantic
+alembic
+pytest-cov
